@@ -1,0 +1,7 @@
+<html>
+<body>
+  <h1>This is theme 1</h1>
+  <div id="content">
+  </div>
+</body>
+</html>
